refactor: Update routes and views for displaying messages
This commit updates the routes and views in the application to display messages on the home page. The `index.js` file in the `routes` directory is modified to pass an array of messages to the `index.ejs` view. The `index.ejs` view is also updated to iterate over the messages array and display each message's text, user, and added date.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,11 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <% messages.forEach((message) => { %>
+      <h2>Message</h2>
+      <p>Text: <%= message.text %></p>
+      <p>User: <%= message.user %></p>
+      <p>Added: <%= message.added %></p>
+    <% }); %>
   </body>
 </html>
