--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/new">Add Message</a>
     <% messages.forEach((message) => { %>
       <h2>Message</h2>
       <p>Text: <%= message.text %></p>
